--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "chart.js": "2.9.3",
     "chartist": "0.11.4",
     "core-js": "3.6.5",
+    "devextreme": "21.2.4",
+    "devextreme-angular": "21.2.4",
+    "devextreme-schematics": "^1.2.24",
     "express": "4.17.1",
     "jquery": "3.5.1",
     "moment": "2.29.1",
