--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "arrive": "2.4.1",
     "bootstrap": "4.5.2",
     "bootstrap-notify": "3.1.3",
-    "chart.js": "2.9.3",
+    "chart.js": "3.7.0",
     "chartist": "0.11.4",
+    "chartjs-plugin-zoom": "^1.2.0",
     "core-js": "3.6.5",
     "devextreme": "21.2.4",
     "devextreme-angular": "21.2.4",
