--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
+    "angular-oauth2-oidc": "^10.0.3",
     "arrive": "2.4.1",
     "bootstrap": "4.5.2",
     "bootstrap-notify": "3.1.3",
@@ -41,7 +42,7 @@
     "ngx-toastr": "13.1.0",
     "rxjs": "6.6.3",
     "tslib": "2.0.2",
-    "zone.js": "0.11.1"
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1001.5",
