--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "paper-dashboard-angular",
-  "version": "2.2.0",
-  "license": "MIT",
+  "name": "AaaS-Web",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
